# commnode

./: .gitignore  Cargo.toml  DEVELOPMENT.md  EXPERIMENT.md  README.md
config/: aggr-bridge.toml  aggr-config.toml  alice-bridge.toml  alice-config.toml  bob-bridge.toml  bob-config.toml  charlie-bridge.toml  charlie-config.toml  echo-bridge.toml  remote-bridge.toml  remote-config.toml
py/: aggregator.py  bridge.py  model.toml  trainer.py
src/: config.rs  framing.rs  lib.rs  protocols.rs  test.rs
src/protocols/: mod.rs  tcp.rs  udp.rs
