[package]
name = "commnode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.30", features = ["serde"]}
regex = "1.9.5"
serde = {version = "1.0.188", features = ["derive"]}
tokio = {version = "1.32.0", features = ["full"]}
tokio-serde = {version = "0.8.0", features = ["json"]}
tokio-util = {version = "0.7.8", features = ["codec"]}
