[package]
name = "commnode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.28"
json = "0.12.4"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.7.8", features = ["codec", "net"] }
toml = "0.8.6"
udp-stream = "0.0.9"
